## Process this file with automake to produce Makefile.in

pkglib_LTLIBRARIES =  \
	libconfigfilecomponent.la

libconfigfilecomponent_la_SOURCES =  \
	configfilecomponent.cpp \
	configfilecomponent.h \
	i2-configfilecomponent.h

libconfigfilecomponent_la_CXXFLAGS = -I${top_srcdir}/base -I${top_srcdir}/jsonrpc
