## Process this file with automake to produce Makefile.in

pkglib_LTLIBRARIES =  \
	libconfigrpccomponent.la

libconfigrpccomponent_la_SOURCES =  \
	configrpccomponent.cpp \
	configrpccomponent.h \
	i2-configrpccomponent.h

libconfigrpccomponent_la_CXXFLAGS = -I${top_srcdir}/base -I${top_srcdir}/jsonrpc -I${top_srcdir}/icinga
