.PHONY: clean

EXTRA_DIST = \
	1-about.md \
	2.0-getting-started.md \
	2.1.1-setting-up-icinga-2.md \
	2.1.2-setting-up-icinga-classic-ui.md \
	2.1.3-setting-up-check-plugins.md \
	2.1.4-setting-up-ido.md \
	2.2-running-icinga.md \
	2.3-monitoring-basics.md \
	3.1-configuration-syntax.md \
	3.2-global-variables.md \
	3.3-object-types.md \
	3-configuring-icinga.md \
	4-icinga-template-library.md \
	5-advanced-topics.md \
	icinga2.8

icinga2docdir = ${docdir}
icinga2doc_DATA =

man8_MANS = \
	icinga2.8

