.PHONY: clean

EXTRA_DIST = \
	1-about.md \
	2.0-getting-started.md \
	2.1-setting-up-icinga-2.md \
	2.2-setting-up-icinga-classic-ui.md \
	2.3-setting-up-check-plugins.md \
	2.4-setting-up-ido.md \
	2.5-setting-up-livestatus.md \
	2.6-running-icinga.md \
	3.1-hosts-and-services.md \
	3.2-commands.md \
	3.3-macros.md \
	3.4-notifications.md \
	3.5-groups.md \
	3.5-using-templates.md \
	3-monitoring-basics.md \
	4.1-configuration-syntax.md \
	4.2-global-variables.md \
	4.3-object-types.md \
	4-configuring-icinga.md \
	5-icinga-template-library.md \
	6-advanced-topics.md \
	7-migrating-from-icinga-1x.md \
	8-differences-between-icinga-1x-and-2.md \
	icinga2.8

icinga2docdir = ${docdir}
icinga2doc_DATA =

man8_MANS = \
	icinga2.8

